fix(collectivity): fix name and number assignment
