# src/main/resources/static/docs/openapiexam.yaml
@@ -5,10 +5,58 @@ info:
     # Versioning
     This API uses semantic versioning (MAJOR.MINOR.PATCH). Available versions are : 
     - v0.0.1 (2026-04-21) : POST /collectivities for collectivities creation and POST /members for members creation.
-  version: 0.0.1
+    - v0.0.2 (2026-04-22) : PUT /collectivities/{id}/informations for collectivity information update.
+    - v0.0.3 (2026-04-23) : New features about membership fees, collectivities transactions and its financial accounts, and members payments.
+  version: 0.0.3
 servers:
   - url: 'https://localhost:8080'
 paths:
+  '/collectivities/{id}/financialAccounts':
+    get:
+      summary: Return list of collectivity's financialAccounts
+      description: Give list of collectivity's financialAccounts
+      parameters:
+        - in: query
+          name: at
+          schema:
+            type: string
+            format: date
+          required: true
+        - in: path
+          name: id
+          description: Collectivity's id
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: List of collectivity's financialAccounts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FinancialAccount'
+
+  '/collectivities/{id}':
+    get:
+      summary: Return a collectivity
+      description: Return a collectivity from the given id
+      parameters:
+        - in: path
+          name: id
+          description: Collectivity's id
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Collectivity's informations
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collectivity'
+
   '/collectivities':
     post:
       summary: Create list of collectivities
@@ -35,6 +83,115 @@ paths:
           description: Collectivity without federation approval or structure missing.
         '404':
           description: Member not found.
+  '/collectivities/{id}/informations':
+    put:
+      summary: Attribute collectivity informations to specific collectivity
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CollectivityInformation'
+      responses:
+        '200':
+          description: Collectivity with updated information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collectivity'
+        '400':
+          description: Either given number or name is already used by other collectivity.
+        '404':
+          description: Collectivity not found.
+  '/collectivities/{id}/membershipFees':
+    get:
+      summary: Retrieve collectivity membership fees
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: List of membership fees for the specific collectivity
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MembershipFee'
+        '404':
+          description: Collectivity not found.
+    post:
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      summary: Create new membership fees for a specific collectivity
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateMembershipFee'
+      responses:
+        '200':
+          description: Created membership fees
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MembershipFee'
+        '400':
+          description: Either unrecognized frequency or amount under 0.
+        '404':
+          description: Collectivity not found.
+  '/collectivities/{id}/transactions':
+    get:
+      summary: Retrieve specific collectivity transactions for a given period
+      description: |
+        Query parameters `from` and `to` are mandatory to filters collectivity transactions.
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: from
+          schema:
+            type: string
+            format: date
+          required: true
+        - in: query
+          name: to
+          schema:
+            type: string
+            format: date
+          required: true
+      responses:
+        '200':
+          description: List of collectivity transactions between provided dates
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CollectivityTransaction'
+        '400':
+          description: Provided query parameters occur some exceptions.
+        '404':
+          description: Collectivity not found.
   '/members':
     post:
       summary: Create list of members
@@ -61,43 +218,41 @@ paths:
             - Membership dues not paid or registration fee not paid.
         '404':
           description: Either collectivity or member not found.
-  '/collectivities/{id}/identity':
-    put:
-      summary: Add name and number to an activity
+  '/members/{id}/payments':
+    post:
+      summary: Create some payments for given member
+      description: |
+        Each time a member create a payment, a transaction is store automatically inside collectivities transactions.
       parameters:
-        - name: collectivityId
-          in: path
-          required: true
+        - in: path
+          name: id
           schema:
             type: string
-        - name: name
-          in: query
           required: true
-          schema:
-            type: string
-        - name: number
-          in: query
-          required: true
-          schema:
-            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateMemberPayment'
       responses:
         '201':
-          description: Collectivity name and number assigned
+          description: List of created members payments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MemberPayment'
 
-        '404':
-          description: Collectivity id not found
 components:
-
   schemas:
     CreateCollectivity:
       type: object
       properties:
         location:
           type: string
-        name:
-          type: string
-        number:
-          type: integer
         members:
           type: array
           items:
@@ -129,15 +284,20 @@ components:
           $ref: '#/components/schemas/Member'
         secretary:
           $ref: '#/components/schemas/Member'
-    Collectivity:
+    CollectivityInformation:
       type: object
       properties:
-        id:
-          type: string
         name:
           type: string
         number:
           type: integer
+    Collectivity:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/CollectivityInformation'
+      properties:
+        id:
+          type: string
         location:
           type: string
         structure:
@@ -196,6 +356,131 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Member'
+    CreateMembershipFee:
+      type: object
+      properties:
+        eligibleFrom:
+          type: string
+          format: date
+        frequency:
+          $ref: '#/components/schemas/Frequency'
+        amount:
+          type: number
+        label:
+          type: string
+    MembershipFee:
+      allOf:
+        - $ref: '#/components/schemas/CreateMembershipFee'
+      type: object
+      properties:
+        id:
+          type: string
+        status:
+          $ref: '#/components/schemas/ActivityStatus'
+    CreateMemberPayment:
+      type: object
+      properties:
+        amount:
+          type: integer
+        membershipFeeIdentifier:
+          type: string
+        accountCreditedIdentifier:
+          type: string
+        paymentMode:
+          $ref: '#/components/schemas/PaymentMode'
+    MemberPayment:
+      properties:
+        id:
+          type: string
+        amount:
+          type: integer
+        paymentMode:
+          $ref: '#/components/schemas/PaymentMode'
+        accountCredited:
+          $ref: '#/components/schemas/FinancialAccount'
+        creationDate:
+          type: string
+          format: date
+
+    FinancialAccount:
+      oneOf:
+        - $ref: '#/components/schemas/CashAccount'
+        - $ref: '#/components/schemas/MobileBankingAccount'
+        - $ref: '#/components/schemas/BankAccount'
+    CashAccount:
+      type: object
+      properties:
+        id:
+          type: string
+        amount:
+          type: integer
+    MobileBankingAccount:
+      type: object
+      properties:
+        id:
+          type: string
+        holderName:
+          type: string
+        mobileBankingService:
+          $ref: '#/components/schemas/MobileBankingService'
+        mobileNumber:
+          type: integer
+        amount:
+          type: number
+    BankAccount:
+      type: object
+      properties:
+        id:
+          type: string
+        holderName:
+          type:
+            string
+        bankName:
+          $ref: '#/components/schemas/Bank'
+        bankCode:
+          type: integer
+        bankBranchCode:
+          type: integer
+        bankAccountNumber:
+          type: integer
+        bankAccountKey:
+          type: integer
+        amount:
+          type: number
+    MobileBankingService:
+      type: string
+      enum:
+        - AIRTEL_MONEY
+        - MVOLA
+        - ORANGE_MONEY
+    CollectivityTransaction:
+      type: object
+      properties:
+        id:
+          type: string
+        creationDate:
+          type: string
+          format: date
+        amount:
+          type: number
+        paymentMode:
+          $ref: '#/components/schemas/PaymentMode'
+        accountCredited:
+          $ref: '#/components/schemas/FinancialAccount'
+        memberDebited:
+          $ref: '#/components/schemas/Member'
+    Bank:
+      type: string
+      enum:
+        - BRED
+        - MCB
+        - BMOI
+        - BOA
+        - BGFI
+        - AFG
+        - ACCES_BAQUE
+        - BAOBAB
+        - SIPEM
     Gender:
       type: string
       enum:
@@ -210,3 +495,21 @@ components:
         - TREASURER
         - VICE_PRESIDENT
         - PRESIDENT
+    Frequency:
+      type: string
+      enum:
+        - WEEKLY
+        - MONTHLY
+        - ANNUALLY
+        - PUNCTUALLY
+    ActivityStatus:
+      type: string
+      enum:
+        - ACTIVE
+        - INACTIVE
+    PaymentMode:
+      type: string
+      enum:
+        - CASH
+        - MOBILE_BANKING
+        - BANK_TRANSFER
